--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 }
 </style>
 <body>
-    <header id="div1" style=" ">
+    <header id="div1">
    <h1> move your mouse insed the box</h1>
     </header>
 <script src="color.js"></script>
