--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </style>
 <body>
     <header id="div1">
-   <h1> move your mouse insed the box</h1>
+   <h1> move your mouse inside the box</h1>
     </header>
 <script src="color.js"></script>
 </body>
