--- a/new year celebration/index.html
+++ b/new year celebration/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <center>
+        <!-- ESEN ANDROID CLUB ♥ -->
         <img height="200px" src="https://www.esen.tn/portail/medias/images/galerie/p1c56q6lgv1jhq1m68gqna5112sq4.png">
     </center>
     <div class="center"><p id="counter"></p></div>
     
     <script src="count.js"></script>
-    <script src="celeb.js"></script>
 </body>
 </html>
